codegen/generated/goud_engine.h


typedef enum FfiPlaybackMode {
    Loop = 0,
    OneShot = 1,
} FfiPlaybackMode;
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
typedef struct GoudContact {
    float point_x;
    float point_y;
    float normal_x;
    float normal_y;
    float penetration;
} GoudContact;
typedef struct FfiSprite {
    uint64_t texture_handle;
    float color_r;
    float color_g;
    float color_b;
    float color_a;
    float source_rect_x;
    float source_rect_y;
    float source_rect_width;
    float source_rect_height;
    bool has_source_rect;
    bool flip_x;
    bool flip_y;
    int32_t z_layer;
    float anchor_x;
    float anchor_y;
    float custom_size_x;
    float custom_size_y;
    bool has_custom_size;
} FfiSprite;
typedef struct FfiColor {
    float r;
    float g;
    float b;
    float a;
} FfiColor;
typedef struct FfiRect {
    float x;
    float y;
    float width;
    float height;
} FfiRect;
typedef struct FfiVec2 {
    float x;
    float y;
} FfiVec2;
typedef struct FfiSpriteAnimator {
    uint32_t current_frame;
    float elapsed;
    bool playing;
    bool finished;
    float frame_duration;
    enum FfiPlaybackMode mode;
    uint32_t frame_count;
} FfiSpriteAnimator;
typedef struct FfiText {
    uint64_t font_handle;
    float font_size;
    float color_r;
    float color_g;
    float color_b;
    float color_a;
    uint8_t alignment;
    float max_width;
    bool has_max_width;
    float line_spacing;
} FfiText;
typedef struct FfiTransform2D {
    float position_x;
    float position_y;
    float rotation;
    float scale_x;
    float scale_y;
} FfiTransform2D;
typedef struct FfiMat3x3 {
    float m[9];
} FfiMat3x3;
typedef struct GoudDebuggerConfig {
    bool enabled;
    bool publish_local_attach;
    const char *route_label;
} GoudDebuggerConfig;
typedef struct GoudContextConfig {
    struct GoudDebuggerConfig debugger;
} GoudContextConfig;
typedef struct FpsStats {
    float current_fps;
    float min_fps;
    float max_fps;
    float avg_fps;
    float frame_time_ms;
} FpsStats;
typedef struct GoudMemoryCategoryStats {
    uint64_t current_bytes;
    uint64_t peak_bytes;
} GoudMemoryCategoryStats;
typedef struct GoudMemorySummary {
    struct GoudMemoryCategoryStats rendering;
    struct GoudMemoryCategoryStats assets;
    struct GoudMemoryCategoryStats ecs;
    struct GoudMemoryCategoryStats ui;
    struct GoudMemoryCategoryStats audio;
    struct GoudMemoryCategoryStats network;
    struct GoudMemoryCategoryStats debugger;
    struct GoudMemoryCategoryStats other;
    uint64_t total_current_bytes;
    uint64_t total_peak_bytes;
} GoudMemorySummary;
typedef void *EngineConfigHandle;
typedef int32_t GoudErrorCode;
typedef struct NetworkSimulationConfig {
    uint32_t one_way_latency_ms;
    uint32_t jitter_ms;
    float packet_loss_percent;
} NetworkSimulationConfig;
typedef struct FfiP2pMeshConfig {
    uint32_t max_peers;
    bool host_migration;
    int32_t topology;
} FfiP2pMeshConfig;
typedef struct FfiRollbackConfig {
    uint32_t max_rollback_frames;
    uint32_t input_delay_frames;
    uint8_t desync_detection;
} FfiRollbackConfig;
typedef struct FfiNetworkStats {
    uint64_t bytes_sent;
    uint64_t bytes_received;
    uint64_t packets_sent;
    uint64_t packets_received;
    uint64_t packets_lost;
    float rtt_ms;
    float send_bandwidth_bytes_per_sec;
    float receive_bandwidth_bytes_per_sec;
    float packet_loss_percent;
    float jitter_ms;
} FfiNetworkStats;
typedef struct RenderCapabilities {
    uint32_t max_texture_units;
    uint32_t max_texture_size;
    bool supports_instancing;
    bool supports_compute;
    bool supports_msaa;
} RenderCapabilities;
typedef struct PhysicsCapabilities {
    bool supports_continuous_collision;
    bool supports_joints;
    uint32_t max_bodies;
} PhysicsCapabilities;
typedef struct AudioCapabilities {
    bool supports_spatial;
    uint32_t max_channels;
} AudioCapabilities;
typedef struct InputCapabilities {
    bool supports_gamepad;
    bool supports_touch;
    uint32_t max_gamepads;
    uint32_t max_touch_points;
} InputCapabilities;
typedef struct NetworkCapabilities {
    bool supports_hosting;
    uint32_t max_connections;
    uint8_t max_channels;
    uint32_t max_message_size;
} NetworkCapabilities;
typedef struct FfiAtlasEntry {
    float u_min;
    float v_min;
    float u_max;
    float v_max;
    uint32_t pixel_x;
    uint32_t pixel_y;
    uint32_t pixel_w;
    uint32_t pixel_h;
} FfiAtlasEntry;
typedef struct FfiAtlasStats {
    uint32_t texture_count;
    uint32_t width;
    uint32_t height;
    uint64_t used_pixels;
    uint64_t total_pixels;
    float efficiency;
    uint64_t wasted_pixels;
} FfiAtlasStats;
typedef struct GoudRenderStats {
    uint32_t draw_calls;
    uint32_t triangles;
    uint32_t texture_binds;
    uint32_t shader_binds;
} GoudRenderStats;
typedef struct FfiRenderMetrics {
    uint32_t draw_call_count;
    uint32_t sprites_submitted;
    uint32_t sprites_drawn;
    uint32_t sprites_culled;
    uint32_t batches_submitted;
    float avg_sprites_per_batch;
    float sprite_render_ms;
    float text_render_ms;
    float ui_render_ms;
    float total_render_ms;
    uint32_t text_draw_calls;
    uint32_t text_glyph_count;
    uint32_t ui_draw_calls;
} FfiRenderMetrics;
typedef struct FfiUiEvent {
    uint32_t event_kind;
    uint64_t node_id;
    uint64_t previous_node_id;
    uint64_t current_node_id;
} FfiUiEvent;
typedef struct Color {
    float r;
    float g;
    float b;
    float a;
} Color;
typedef struct FfiUiStyle {
    bool has_background_color;
    struct Color background_color;
    bool has_foreground_color;
    struct Color foreground_color;
    bool has_border_color;
    struct Color border_color;
    bool has_border_width;
    float border_width;
    bool has_font_family;
    const uint8_t *font_family_ptr;
    size_t font_family_len;
    bool has_font_size;
    float font_size;
    bool has_texture_path;
    const uint8_t *texture_path_ptr;
    size_t texture_path_len;
    bool has_widget_spacing;
    float widget_spacing;
} FfiUiStyle;
typedef struct GoudResult {
    GoudErrorCode code;
    bool success;
} GoudResult;
typedef struct FfiFramePhaseTimings {
    uint64_t begin_frame_us;
    uint64_t end_frame_us;
    uint64_t surface_acquire_us;
    uint64_t shadow_pass_us;
    uint64_t shadow_build_us;
    uint64_t render3d_scene_us;
    uint64_t uniform_upload_us;
    uint64_t render_pass_us;
    uint64_t gpu_submit_us;
    uint64_t readback_stall_us;
    uint64_t surface_present_us;
    uint64_t anim_eval_us;
    uint64_t bone_pack_us;
    uint64_t bone_upload_us;
} FfiFramePhaseTimings;
bool goud_engine_config_set_physics_debug(EngineConfigHandle handle, bool enabled);